WIP: Simplify viewport scrolling, fix auto-hiding scrollbar w/touchpad issue

--- a/experiments/danlehen/flow/packages/app/src/index.css
+++ b/experiments/danlehen/flow/packages/app/src/index.css
@@ -27,7 +27,6 @@ html, body {
 
 .editorPane {
     position: relative;
-    padding: 18px;
     overflow-y: auto;
 }
 
