--- a/experiments/danlehen/flow/packages/editor/src/components/virtualized/index.css
+++ b/experiments/danlehen/flow/packages/editor/src/components/virtualized/index.css
@@ -1,1 +1,5 @@
-.virtualized { }
+.virtualized { 
+    /* Cursor overlay needs to find a containing block prior to scroll. */
+    position: relative;
+    width: 100%;
+}
